--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 ><div>Contact</div>
                 <div class="link-block-underline"></div
               ></a>
-              <a href="https://drive.google.com/file/d/1Fm3w1mvvaD6KxJyaUG_kdq5MHnBnkVay/view?usp=sharing"
+              <a href="https://drive.google.com/file/d/1G1lecj3LiAxG9hvLO34dgq4AZXmBfX52/view?usp=sharing"
                class="navbold link-block nav-links w-inline-block"
                target="_blank"
                 ><div>Resume</div>
@@ -342,11 +342,11 @@
                 </div>
                 <div class="fade-in-move-on-scroll">
                   <p class="_20px-paragraph yellow-text">
-                    I am a final year UG student in
-                    department of Civil Engineering at IIT Kanpur. As aaspiring
+                    Hello, I am Virendra Sonkaria. I have recently graduated from IIT Kanpur with a BTech degree in the Department of Civil Engineering.
+                  During my time at IIT Kanpur, I was a member of the organizing core team as the Head of Web and App Development for UDGHOSH'22. As aaspiring
                     web developer I have trained myself in various frontend and
-                    backend technologies like ReactJS, Angular, ExpressJS,
-                    ChartJS, NextJS , NodeJS, Firebase, MongoDB etc. <br />
+                    backend technologies like ReactJS, Redux, Angular, ExpressJS,
+                    ChartJS, NextJS , NodeJS, Firebase, MongoDB, MySQL etc. <br />
                     I assist designers, small agencies, and businesses in
                     bringing their concepts to life. I turn your requirements
                     into CMS-ified and ecommerce-ified websites - on time and on
@@ -496,17 +496,17 @@
             <div role="listitem" class="project-list-item w-dyn-item">
               <a
                 target="_blank"
-                href="https://github.com/virendra-jpg/uber-clone-app"
+                href="https://github.com/virendra-jpg/Facebook-Clone"
                 class="projecs-holder w-inline-block"
                 ><div class="project-name-holder">
-                  <div>Uber-Clone</div>
+                  <div>Facebook-Clone</div>
                 </div>
                 <div class="project-category-holder">
-                  <div>Clone of Uber Web</div>
+                  <div>designed and developed a web app which has simillar features like Facebook</div>
                 </div>
                 <div class="project-thumbnail-holder">
                   <div class="project-thumbnail-container">
-                    <img src="./assest/uber.png" class="project-thumbnail" />
+                    <img src="./assest/facebookclone.png" class="project-thumbnail" />
                   </div></div
               ></a>
             </div>
@@ -554,11 +554,9 @@
                 <div class="card-text-holder">
                   <h2 class="black-text-no-margin">Front end</h2>
                   <p class="card-paragraph">
-                    I assist designers, small agencies, and businesses in
-                    bringing their concepts to life. I turn your requirements
-                    into CMS-ified and ecommerce-ified websites - on time and on
-                    budget - using Figma, VS Code, and coffee. I can work in any
-                    frontend framework.
+                    
+                     Whether it's designing elegant layouts, implementing smooth animations, or optimizing for various devices, frontend development is a dynamic realm where design meets code to bring digital visions to life.
+                     I can do frontend development in many frameworks and libraries like ReactJS, Angular12, HTML, CSS, JS, ChartJS, ExpressJS, jQuery, Bootstrap, Tailwind CSS etc. 
                   </p>
                 </div>
               </div>
@@ -573,9 +571,8 @@
                 <div class="card-text-holder">
                   <h2 class="white-text-no-margin">Back end</h2>
                   <p class="card-paragraph white-text">
-                    Backend is as much important as Frontend. I follow
-                    <e>Model-View-Controller (MVC)</e> framework for back end. I
-                    use NodeJS, Firebase, MongoDB for backend and database
+                    Backend development is the backbone of every digital experience we encounter. It's the hidden force that powers the functionalities, data storage, Authantication and communication of websites and applications. I follow
+                    <e>Model-View-Controller (MVC)</e> framework for back end. I can work in various technologies like NodeJS, MongoDB, Firebase, MySQL etc. for backend development and database
                     management.
                   </p>
                 </div>
